--- a/app/src/main/res/layout/fragment_hot_post.xml
+++ b/app/src/main/res/layout/fragment_hot_post.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chenjunquan.shoppingmall.app.WelcomeActivity">
+    android:orientation="vertical">
 
-    <ImageView
+    <ListView
+        android:id="@+id/lv_hot_post"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"/>
-
+        android:background="#eeee"
+        android:divider="#00000000"
+        android:dividerHeight="18dp"></ListView>
 </LinearLayout>
