--- a/app/src/main/res/layout/fragment_tag.xml
+++ b/app/src/main/res/layout/fragment_tag.xml
@@ -1,13 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chenjunquan.shoppingmall.app.WelcomeActivity">
+    android:orientation="vertical"
+    tools:context=".type.fragment.TagFragment">
 
-    <ImageView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:visibility="invisible" />
+
+    <GridView
+        android:id="@+id/gv_tag"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"/>
+        android:numColumns="3" />
 
 </LinearLayout>
